Changes requested after code review add server side filtering